--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@supabase/supabase-js": "^2.46.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
